# rstxt

./: .gitignore  .travis.yml  Makefile  README.rst  pylintrc  pyproject.toml  rstxt.dic  rstxt.py  spellrst.py  spellrst.toml  test-requirements.txt
tests/: test_run.py
tests/testdata/: headers.rst  spellrst.toml  todo.rst
