[build-system]
requires = ["intreehooks"]
build-backend = "intreehooks:loader"

[tool.intreehooks]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "spellrst"
author = "Jacques Kvam"
author-email = "jwkvam+pypi@gmail.com"
home-page = "https://github.com/jwkvam/spellrst"
description-file = "README.rst"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7"
]
requires = [
    "click",
    "docutils",
    "spacy",
    "toml"
]
requires-python = ">=3.6"

[tool.flit.scripts]
spellrst = "spellrst:main"
