[build-system]
requires = ["intreehooks"]
build-backend = "intreehooks:loader"

[tool.intreehooks]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "rstxt"
author = "Jacques Kvam"
author-email = "jwkvam+pypi@gmail.com"
home-page = "https://github.com/jwkvam/rstxt"
description-file = "README.rst"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7"
]
requires = [
    "click",
    "docutils"
]
requires-python = ">=3.6"

[tool.flit.scripts]
rstxt = "rstxt:main"
